# Reader_Stripped

./: .gitignore  README.md  package-lock.json  ufid_reader_stripped.sln
Database/: README.md  README.txt
Database/data/: API-to-Database.py  insert_into_db.py  ufid_database_backup.sql
Misc/IN_PROGRESS_WORK/new/UFID_Reader_webapp/fastapi_backend/: pyproject.toml
Misc/IN_PROGRESS_WORK/new/UFID_Reader_webapp/fastapi_backend/app/: main.py  models.py
Misc/IN_PROGRESS_WORK/new/UFID_Reader_webapp/fastapi_backend/app/api/: router.py
Misc/IN_PROGRESS_WORK/new/UFID_Reader_webapp/fastapi_backend/app/api/routes/: exams.py  kiosks.py  students.py  users.py
Misc/IN_PROGRESS_WORK/new/UFID_Reader_webapp/fastapi_backend/app/utils/: database.py
Misc/KioskCase/: README.md
UFIDReader/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  UFIDReader.csproj  app.manifest
UFIDWebApp/: .env  app.py  backend.py
UFIDWebApp/templates/: index.html
UFID_Reader/: App.axaml  App.axaml.cs  Program.cs  README.md  UFID_Reader.csproj  UFID_Reader.sln  ViewLocator.cs  app.manifest
UFID_Reader/Factory/: FrameFactory.cs
UFID_Reader/Models/: AuthResult.cs  Course.cs  Exam.cs  FrameNames.cs  Kiosk.cs  Student.cs  User.cs
UFID_Reader/Services/: AuthService.cs  DateTimeService.cs  DbService.cs  KioskService.cs  RpiService.cs  ScheduleService.cs  StudentService.cs  TimesheetService.cs  ValidationService.cs
UFID_Reader/Styles/: AppDefaultStyles.axaml  DefaultStyles.axaml
UFID_Reader/ViewModels/: BaseFrameViewModel.cs  (+8 more)
UFID_Reader_Web_App/: package-lock.json
(+87 files in other folders)
