[project]
name = "ufid-reader-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "databases>=0.9.0",
    "fastapi>=0.115.11",
    "pydantic[email]>=2.10.6",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
